syntax = "proto3";

option go_package = "github.com/couchbase/stellar-nebula/genproto/v1;couchbase_v1";

package com.couchbase.v1;

// This is a placeholder for some additional error details, ideally we will
// likely have a few different blocks of error data depending on the error type.
message ErrorInfo {
  string reason = 1;
  map<string, string> metadata = 2;
}

message MutationToken {
  string bucket_name = 1;
  uint32 vbucket_id = 2;
  uint64 vbucket_uuid = 3;
  uint64 seq_no = 4;
}

message MutationState { repeated MutationToken tokens = 1; }

service Couchbase {
  rpc Hello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {}

message HelloResponse {}
